--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
-    h1 { font-family: "Bowlby One SC" }
-
+    h1 { font-family: "Bowlby One SC"; font-size: 15px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } h3 { font-family: "Bowlby One SC"; font-size: 17px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; } p { font-family: "Bowlby One SC"; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } blockquote { font-family: "Bowlby One SC"; font-size: 17px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } pre { font-family: "Bowlby One SC"; font-size: 11px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; }
+}
 .animation {
     text-align: center;
     font-size: 15vw;
